lab1/Test/L1-A-11-15.output
Error Type B at Line 20
Error Type B at Line 29
Error Type B at Line 31
Error Type B at Line 36
Error Type B at Line 37
Error Type B at Line 40
Error Type B at Line 40
Error Type B at Line 44
Error Type B at Line 45
